--- a/app/Kconfig
+++ b/app/Kconfig
@@ -469,6 +469,10 @@ choice CBPRINTF_IMPLEMENTATION
 
 endchoice
 
+config PMW3389
+	bool
+	default y
+
 module = ZMK
 module-str = zmk
 source "subsys/logging/Kconfig.template.log_config"
