full out kconfig choice with a prompt

--- a/app/Kconfig
+++ b/app/Kconfig
@@ -43,9 +43,15 @@ config ZMK_HID_REPORT_TYPE_NKRO
 	  from working with some BIOS/UEFI versions that only support "boot keyboard" support.
 	  This option also prevents using some infrequently used higher range HID usages.
 
+endchoice
+
+choice PMW3389
+	prompt "Dummy prompt"
+	
 config PMW3389
 	bool
-
+	default y
+	
 endchoice
 
 if ZMK_HID_REPORT_TYPE_HKRO
