Added PMW3389 folder to driver/sensor/kconfig

--- a/app/drivers/sensor/Kconfig
+++ b/app/drivers/sensor/Kconfig
@@ -6,3 +6,4 @@ rsource "ec11/Kconfig"
 rsource "cirque_trackpad/Kconfig"
 rsource "pmw33xx/Kconfig"
 rsource "pixart/pmw3360/Kconfig"
+rsource "pixart/pmw3389/Kconfig"
