Attempting to add drorchen's pmw3360 implementation

--- a/app/drivers/sensor/Kconfig
+++ b/app/drivers/sensor/Kconfig
@@ -3,3 +3,7 @@
 
 rsource "battery/Kconfig"
 rsource "ec11/Kconfig"
+rsource "cirque_trackpad/Kconfig"
+rsource "pmw33xx/Kconfig"
+rsource "pixart/pmw3360/Kconfig"
+rsource "pixart/pmw3389/Kconfig"
