--- a/app/drivers/zephyr/dts/bindings/sensor/pixart,pmw3360.yaml
+++ b/app/drivers/zephyr/dts/bindings/sensor/pixart,pmw3360.yaml
@@ -16,3 +16,7 @@ properties:
     irq-gpios:
       type: phandle-array
       required: true
+    scroll-layer:
+        type: int
+        description: the momentary layer used to modifiy move to scroll
+        required: false
