--- a/app/boards/arm/nice_nano/nice_nano.dtsi
+++ b/app/boards/arm/nice_nano/nice_nano.dtsi
@@ -60,7 +60,7 @@
 };
 
 &spi0 {
-    compatible = "nordic,nrf-spim";
+    compatible = "pixart,pmw3360";
     pinctrl-0 = <&spi0_default>;
     pinctrl-1 = <&spi0_sleep>;
     pinctrl-names = "default", "sleep";
