Trying to replicate another &spi definition

--- a/app/boards/arm/nice_nano/nice_nano.dtsi
+++ b/app/boards/arm/nice_nano/nice_nano.dtsi
@@ -60,10 +60,21 @@
 };
 
 &spi0 {
-    compatible = "pixart,pmw3360";
+    status = "okay";
+	compatible = "pixart,pmw3360";
     pinctrl-0 = <&spi0_default>;
     pinctrl-1 = <&spi0_sleep>;
     pinctrl-names = "default", "sleep";
+	cs-gpios = <&gpio0 24 GPIO_ACTIVE_HIGH>; // P0.24
+
+    trackball: trackball@0 {
+        compatible = "pixart,pmw3360";
+        reg = <0>;
+        label = "Pixart PMW3360";
+        irq-gpios = <&gpio0 0 GPIO_ACTIVE_LOW>;
+        spi-max-frequency = <2000000>;
+        scroll-layer = <5>;
+    };
 };
 
 &usbd {
