--- a/app/boards/arm/nice_nano/nice_nano.dtsi
+++ b/app/boards/arm/nice_nano/nice_nano.dtsi
@@ -66,13 +66,15 @@
     pinctrl-1 = <&spi0_sleep>;
     pinctrl-names = "default", "sleep";
 	cs-gpios = <&gpio0 24 GPIO_ACTIVE_HIGH>; // P0.24
+	irq-gpios = <&gpio0 0 GPIO_ACTIVE_HIGH>;
 
     trackball: trackball@0 {
         compatible = "pixart,pmw3360";
-        reg = <0>;
         label = "Pixart PMW3360";
-        irq-gpios = <&gpio0 0 GPIO_ACTIVE_LOW>;
-        spi-max-frequency = <2000000>;
+		reg = <0>;
+		spi-max-frequency = <2000000>;
+		cs-gpios = <&gpio0 24 GPIO_ACTIVE_HIGH>; // P0.24
+        irq-gpios = <&gpio0 0 GPIO_ACTIVE_HIGH>;
         scroll-layer = <5>;
     };
 };
