Revert "Update nice_nano.dtsi"
This reverts commit 2d27601122f0bf208fee8848832131caf66bd3b7.

--- a/app/boards/arm/nice_nano/nice_nano.dtsi
+++ b/app/boards/arm/nice_nano/nice_nano.dtsi
@@ -68,7 +68,7 @@
 	cs-gpios = <&gpio0 24 GPIO_ACTIVE_HIGH>; // P0.24
 	irq-gpios = <&gpio0 0 GPIO_ACTIVE_HIGH>;
 
-    trackball: spi@40003000 {
+    trackball: trackball@0 {
         compatible = "pixart,pmw3360";
         label = "Pixart PMW3360";
 		reg = <0>;
