--- a/app/boards/arm/nice_nano/nice_nano-pinctrl.dtsi
+++ b/app/boards/arm/nice_nano/nice_nano-pinctrl.dtsi
@@ -52,4 +52,21 @@
             low-power-enable;
         };
     };
+	
+	spi1_default_alt: spi1_default_alt {
+        group1 {
+            psels = <NRF_PSEL(SPI_SCK, 0, 22)>,
+                    <NRF_PSEL(SPI_MISO, 0, 17)>,
+                    <NRF_PSEL(SPI_MOSI, 0, 20)>;
+        };
+    };
+
+    spi1_sleep_alt: spi1_sleep_alt {
+        group1 {
+            psels = <NRF_PSEL(SPI_SCK, 0, 22)>,
+                    <NRF_PSEL(SPI_MISO, 0, 17)>,
+                    <NRF_PSEL(SPI_MOSI, 0, 20)>;
+            low-power-enable;
+      };
+    };
 };
