--- a/app/boards/arm/nice_nano/nice_nano.dtsi
+++ b/app/boards/arm/nice_nano/nice_nano.dtsi
@@ -66,7 +66,7 @@
     pinctrl-names = "default", "sleep";
 };
 
-&spi0 {
+/*&spi0 {
     status = "okay";
 	compatible = "pixart,pmw3360";
     pinctrl-0 = <&spi0_default>;
@@ -75,15 +75,13 @@
 	cs-gpios = <&gpio0 24 GPIO_ACTIVE_HIGH>; // P0.24
 	irq-gpios = <&gpio0 0 GPIO_ACTIVE_HIGH>;
 
-/*
     trackball: trackball@0 {
         label = "Pixart PMW3360";
 		reg = <0>;
 		spi-max-frequency = <2000000>;
         scroll-layer = <5>;
     };
-*/
-};
+};*/
 
 &spi1 {
     compatible = "nordic,nrf-spim";
